# 2bu2t-api

./: .dockerignore  .gitignore  .woodpecker.yml  Dockerfile  Makefile  README.md  flake.nix  pyproject.toml  setup.cfg  setup_dev_env.sh
app/: __init__.py  app.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  security.py  utils.py
app/ipfs/: __init__.py  client.py
app/models/: __init__.py  token.py  user.py
app/routers/: __init__.py  auth.py  example.py
migrations/: README  README.md  env.py
migrations/versions/: 44f7d032d4a8_initial_revision.py  92a27b009b33_initial_revision.py  97a011dc86de_add_password_and_verifed_fields.py  b04c9b5c7e7d_initial_revision.py  d3409f086e74_initial_revision.py
tests/: test_authorization.py  test_example.py  test_ipfs.py  test_tokens.py  utils.py
