[tool.poetry]
name = "app"
version = "0.1.0"
description = "firesquare.ru backend"
authors = ["Egor Ternovoy <cofob@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.10"

# FastAPI
fastapi = "^0.85.0" # Web-framework
pydantic = "^1.10.2" # Serializtion-framework
uvicorn = { extras = ["standard"], version = "^0.18.3" } # ASGI web-server

# Database
SQLAlchemy = "^1.4.41" # Database-framework
sqlmodel = "^0.0.8" # Pydantic-based abstraction over sqlalchemy models
sqlalchemy-cockroachdb = "^1.4.4" # CockroachDB support
psycopg2-binary = "^2.9.3" # PostgreSQL driver
alembic = "^1.8.1" # Database migrations

# IPFS
aiohttp = "^3.8.3"

# Logging
loguru = "^0.6.0"

# JWT
python-jose = "^3.3.0"

# Password hashing
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0" # Code formatter
mypy = "^0.971" # Static type checking
isort = "^5.10.1" # Import sorting
pycln = "^2.1.1" # Import formatting
flake8 = "^5.0.4" # Linter
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"} # Mypy SA support
sqlalchemy2-stubs = "^0.0.2-alpha.27" # SA stubs
pre-commit = "^2.20.0" # Git pre commit hooks
pytest = "^7.1.3" # Testing framework
pytest-asyncio = "^0.19.0" # Async support for pytest
requests = "^2.28.1" # For FastAPI tests
pdoc3 = "^0.10.0" # HTML docs generation

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
